feat: replace jsonrpc2 Client with a bidirectional Conn
A Conn sends calls, answers calls, and matches responses by id. Server
is the method table and the one-document fold. Pipe joins two Conns for
tests. Client and Server.serve are gone.